en/1.x/_sources/facts/postgresql.rst.txt
Postgresql Facts
----------------

:code:`postgresql.PostgresqlDatabases`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(PostgresqlDatabases, postgresql_user=None, postgresql_password=None, postgresql_host=None, postgresql_port=None)


Returns a dict of PostgreSQL databases and metadata:

.. code:: python

    {
        "pyinfra_stuff": {
            "encoding": "UTF8",
            "collate": "en_US.UTF-8",
            "ctype": "en_US.UTF-8",
            ...
        },
    }



:code:`postgresql.PostgresqlRoles`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(PostgresqlRoles, postgresql_user=None, postgresql_password=None, postgresql_host=None, postgresql_port=None)


Returns a dict of PostgreSQL roles and data:

.. code:: python

    {
        'pyinfra': {
            'super': true,
            'createrole': false,
            'createdb': false,
            ...
        },
    }


