en/2.x/_sources/facts/postgresql.rst.txt
Postgresql Facts
----------------

See also: :doc:`../operations/postgresql`.

.. _facts:postgresql.PostgresqlDatabases:

:code:`postgresql.PostgresqlDatabases`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(PostgresqlDatabases, psql_user=None, psql_password=None, psql_host=None, psql_port=None)

Returns a dict of PostgreSQL databases and metadata:

.. code:: python

    {
        "pyinfra_stuff": {
            "encoding": "UTF8",
            "collate": "en_US.UTF-8",
            "ctype": "en_US.UTF-8",
            ...
        },
    }


.. _facts:postgresql.PostgresqlRoles:

:code:`postgresql.PostgresqlRoles`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. code:: python

    host.get_fact(PostgresqlRoles, psql_user=None, psql_password=None, psql_host=None, psql_port=None)

Returns a dict of PostgreSQL roles and data:

.. code:: python

    {
        "pyinfra": {
            "super": true,
            "createrole": false,
            "createdb": false,
            ...
        },
    }

